--- a/index.html
+++ b/index.html
@@ -1,1 +1,182 @@
-<p>Hello</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/css/home.css" />
+    <title>Park Dentistry</title>
+  </head>
+  <body>
+    <!-- <div style="position: fixed;" id="responsive"><span></span></div> -->
+
+    <div class="lighting-effect-a"></div>
+    <div class="lighting-effect-b"></div>
+    <div class="header">
+      <img class="header__logo" src="img/logo.png" alt="Park dentistry logo" />
+      <div class="header__content">
+        <div class="header__search">search-tool</div>
+        <div class="header__menu">
+          <ul>
+            <li>
+              <a href="">PARK DENTISTRY</a>
+            </li>
+            <li>
+              <a href="">TEAM</a>
+            </li>
+            <li>
+              <a href="">BLOG</a>
+            </li>
+            <li>
+              <a href="">CONTACT</a>
+            </li>
+            <li>
+              <a href="">LOCATION</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header__icons">
+          <img src="img/icons/f.png" alt="" />
+          <img src="img/icons/f.png" alt="" />
+          <img src="img/icons/f.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+        <section class="section-a" id="a">
+          <img class="section-a__girls-image" src="img/girls.png" alt="" />
+          <div class="section-a__content">
+            <p class="content__text">
+              a place where <br />
+              <b> children can be <br />children!</b>
+            </p>
+            <button class="button-styled button-styled--a">call for an appoinment</button>
+            <a class="slide slide--first" href="#down">
+              <p id="down">Scroll Down</p>
+              <div></div><img src="img/icons/button-down.png" alt=""></div>
+            </a>
+          <img class="section-a__tree-image" src="img/tree.PNG" alt="" />
+        </section>
+
+        <section class="section-b" id="b">
+          <img class="section-b__image" src="img/decoration-b.png" alt="" />
+              <p class="p1">
+                Park Dentistry was born because we want to show that it is possible
+                to have a <b>good time</b>  in a doctor's practice.
+              </p>
+              <img class="office_img" src="img/office.png" alt="" />
+              <p class="p2">
+                It may sound impossible but we want to achieve it by showing<b> the
+                positive side of health!</b>
+              </p>
+              <p class="p3">
+                By implementing a different concept of doctor, patient and practice
+                through experience.
+              </p>
+              <p class="p4">
+                Experience that in the long term will build habits that guarantee
+                prevention and awareness of a comprehensive health that begins in
+                the mouth
+              </p>
+        </section>
+
+        <section class="section-c" id="c">
+          <img class="section-c__image-a" src="img/logo-d.png" alt="" />
+          <div class="section-c__gallery"><img src="img/gallery.png" alt="" /></div>
+          <div class="content">
+            <p class="content__p1">
+              We provide a close, welcoming, comfortable, professional and fun
+              service, <b> for every mom, dad and child. </b> 
+            </p>
+            <p class="content__p2">
+              We have a waiting room for parents to be confortable managing
+              different activities and kids playing around just befores their
+              appointment.
+            </p>
+        </div>
+          <img class="section-c__image-b" src="img/decoration-c-b.png" alt="" />
+        </section>
+
+        <section class="section-d" id="d">
+          <button class="button-styled button-styled--d ">New Patient</button>
+          <img class="section-d__image phone-hide" src="img/childrens.png" alt="">
+          <img style="display:none" class="section-d__image phone" src="img/childrens-p.png" alt="">
+        </section>
+
+        <section class="section-e" id="e">
+        <div class="section-e__text">
+          <p class="p1">Our Team:
+          </p>
+          <p  class="p2">Lorem ipsum
+            dolor sit amet,
+            consectevt</p>
+          <p  class="p3">Look, listen and practice with the
+            advices we have for you, your kids
+            and family. Look, listen and practice
+            with the advices we have for you,
+            your kids and family. Look, listen
+            and practice with the advices we
+            have for you, your kids and family</p>
+        </div>
+        <div class="section-e__staffs">
+          <div class="staff">
+              <div class="profile">
+                <img class="staff__photo" src="img/staff/staff-a.png" alt="">
+                <img class="staff__plus" src="img/icons/plus.png" alt="">
+              </div>
+              <p> <b> Kristi Parker, DDS, MSD</b> <br>
+                Co-Founder / Pediatric Dentist</p>
+          </div>
+
+          <div class="staff">
+            <div class="profile">
+              <img class="staff__photo" src="img/staff/staff-b.png" alt="">
+              <img class="staff__plus" src="img/icons/plus.png" alt="">
+            </div>
+            <p> <b> Kristi Parker, DDS, MSD</b> <br>
+              Co-Founder / Pediatric Dentist</p>
+          </div>
+
+          <div class="staff">
+            <div class="profile">
+              <img class="staff__photo" src="img/staff/staff-c.png" alt="">
+              <img class="staff__plus" src="img/icons/plus.png" alt="">
+            </div>
+            <p> <b> Kristi Parker, DDS, MSD</b> <br>
+              Co-Founder / Pediatric Dentist</p>
+          </div>
+
+        </div>
+        </section>
+
+        <section class="section-f">
+          <div class="section-f__content">
+            <img class="section-f__logo" src="img/logo-b.png" alt="">
+            <p class="p1">Blog</p>
+            <p class="p2">Look, listen and practice with the advices we
+            <br>
+            have for you, your kids and family</p>
+            <button class="button-styled button-styled--a button-styled--f">check out</button>
+          </div>
+          <img  class="toothbrush" src="img/toothbrush.png" alt="">
+        </section>
+
+        <section class="section-g">
+          <iframe class="map"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3463.2418191557294!2d-95.39912968556385!3d29.770648438411015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c0ab216aab6b%3A0x12ae5c520aba941a!2s102%20Heights%20Blvd%20St%20B%2C%20Houston%2C%20TX%2077007%2C%20EE.%20UU.!5e0!3m2!1ses!2sco!4v1588048918368!5m2!1ses!2sco"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <div class="section-g__content">
+            <img class="section-g__logo" src="img/logo-e.png" alt="">
+            <button class="button-styled button-styled--g">call for an appointment</button>
+            <div class="sections-g">
+              <div class="s1"><img src="img/icons/phone-small-icon.png" alt=""><p>[832] 386.5824</p></div>
+              <div class="s2"><img src="img/icons/marker-small-icon.png" alt=""><p>102 Heights Blvd, St B</p></div>
+              <div class="s3" ><img src="img/icons/email-small-icon.png"><p>jcsardi@parkdentistryforkids.com</p></div>
+            </div>
+          </div>
+        </section>
+      </div>
+    <footer>
+      <img class="park-footer" src="img/park-footer.png" alt="">
+      <img class="houston-footer"  src="img/houston-footer.png" alt="">
+      <img  class="altillo-footer" src="img/altillo-footer.png" alt="">
+    </footer>
+  </body>
+</html>
